--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,20 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="nav">
+    <ion-header>
+        <ion-toolbar>
+            Menu
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-list>
+            <ion-item (click)="onLoad(tabspage)">
+                <ion-icon name="quote" item-left></ion-icon>
+                Quotes
+            </ion-item>
+            <ion-item (click)="onLoad(settingsPage)">
+                <ion-icon name="settings"></ion-icon>
+                Settings
+            </ion-item>
+        </ion-list>
+    </ion-content>    
+</ion-menu>
+<ion-nav [root]="tabspage" #nav></ion-nav>
